# devkit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  devkit.toml  release-please-config.json
.claude-plugin/: marketplace.json  plugin.json
.codex/: config.toml
.codex-plugin/: plugin.json
.cursor/: mcp.json
.cursor-plugin/: plugin.json
.githooks/: post-checkout
.github/workflows/: ci.yml  release-please.yml
crates/devkit-common/: Cargo.toml
crates/devkit-common/src/: cmd.rs  gitfetch.rs  github.rs  lib.rs  linear.rs  paths.rs  progress.rs  report.rs  secrets.rs  slack.rs  store.rs  supervise.rs  template.rs  ui.rs  worktree.rs
crates/devkit-common/src/daemon/: client.rs  framing.rs  mod.rs  transport.rs
crates/devkit-common/src/sys/: mod.rs  unix.rs  windows.rs
crates/devkit-issue/: Cargo.toml
crates/devkit-issue/src/: lib.rs  prs.rs  status.rs
crates/devkit-issue/tests/: gather_local.rs
crates/devkit-locks/: Cargo.toml
crates/devkit-locks/src/: hook.rs  ident.rs  lib.rs  model.rs  store.rs
crates/devkit-locks/src/daemon/: client.rs  proto.rs
crates/devkit-locks/tests/: memory_store.rs
crates/devkit-mcp/: Cargo.toml
crates/devkit-mcp/src/: actions.rs  devrun.rs  issue.rs  jsonrpc.rs  lib.rs  locks.rs  ports.rs
crates/devkit-portd/: Cargo.toml
crates/devkit-portd/src/: main.rs  supervisor.rs
crates/devkit-portd/tests/: supervision.rs
crates/devkit-portd/tests/common/: mod.rs
crates/devkit-ports/: Cargo.toml
crates/devkit-ports/src/: apps.rs  config.rs  doppler.rs  lib.rs  load.rs  registry.rs  run.rs
crates/devkit-ports/src/daemon/: client.rs  mod.rs  proto.rs  transport.rs
crates/devkit-ports/src/strays/: mod.rs  os.rs  signature.rs
crates/devkit-ports/tests/: memory_store.rs  registry.rs
crates/devrun/: Cargo.toml
crates/devrun/src/: baseline.rs  env.rs  main.rs  supervise.rs
crates/issue/: Cargo.toml
crates/issue-end/: Cargo.toml
crates/issue-end/src/: main.rs
crates/issue-prep/: Cargo.toml
crates/issue-prep/src/: main.rs
crates/issue/src/: main.rs  review.rs  setup.rs  triage.rs
crates/issue/src/dashboard/: chart.rs  data.rs  mod.rs
crates/portman/: Cargo.toml
crates/portman/src/: main.rs
crates/pr-status/: Cargo.toml
crates/pr-status/src/: main.rs
docs/: 2026-06-19-devkit-design.md  2026-06-19-devkit-plan.md  bugs.md  configuration.md  next-features.md  next-steps.md
docs/superpowers/plans/: 2026-06-19-devkit-plan.md  2026-06-20-file-locking.md  2026-06-20-issue-binary-consolidation.md  2026-06-20-supervisor-daemon.md  2026-06-20-windows-support-phase1.md  2026-06-21-authoritative-in-memory-locks.md  2026-06-21-authoritative-in-memory-portd.md  2026-06-21-daemon-authoritative-liveness.md  2026-06-21-daemon-health-probe-restarts.md  2026-06-21-devkit-mcp-server.md  2026-06-21-multi-agent-skill-packaging.md  2026-06-22-agent-write-access-harness.md  2026-06-22-daemon-hard-cgroup-memory-cap.md  2026-06-22-daemon-memory-action-restart.md  2026-06-22-devkit-mcp-devrun-actions.md  2026-06-22-devkit-mcp-issue-actions.md  2026-06-22-issue-fetch-progress-bars.md  2026-06-23-layered-config-and-config-command.md  2026-06-23-optional-doppler-launch-templating.md  2026-06-24-config-templating.md  2026-06-24-configurable-per-app-prep-files.md  2026-06-24-devkit-credential-setup.md  2026-06-24-devkit-mcp-cooperation-followups.md  2026-06-24-devrun-cross-worktree-down.md  2026-06-24-issue-info.md  2026-06-24-prep-file-templating.md  2026-06-26-cli-progress-spinners.md  2026-06-26-issue-checkout-pr.md  2026-06-26-issue-review-request-finish.md  2026-06-30-stray-server-detection.md  2026-06-30-worktree-include-backfill.md
docs/superpowers/specs/: 2026-06-19-devkit-design.md  2026-06-20-file-locking-design.md  2026-06-20-issue-binary-consolidation-design.md  2026-06-20-supervisor-daemon-design.md  2026-06-20-windows-support-design.md  2026-06-21-agent-write-access-harness-design.md  2026-06-21-authoritative-in-memory-locks-design.md  2026-06-21-authoritative-in-memory-portd-design.md  2026-06-21-daemon-authoritative-liveness-design.md  2026-06-21-daemon-health-probe-restarts-design.md  2026-06-21-devkit-mcp-server-design.md  2026-06-21-multi-agent-skill-packaging-design.md  2026-06-22-daemon-hard-cgroup-memory-cap-design.md  2026-06-22-daemon-memory-action-restart-design.md  2026-06-22-devkit-mcp-devrun-actions-design.md  2026-06-22-devkit-mcp-issue-actions-design.md  2026-06-22-issue-fetch-progress-bars-design.md  2026-06-23-layered-config-and-config-command-design.md  2026-06-23-optional-doppler-launch-templating-design.md  2026-06-24-config-templating-design.md  2026-06-24-configurable-per-app-prep-files-design.md  2026-06-24-devkit-credential-setup-design.md  2026-06-24-devkit-mcp-cooperation-followups-design.md  2026-06-24-devrun-cross-worktree-down-design.md  2026-06-24-issue-info-design.md  2026-06-24-prep-file-templating-design.md  2026-06-26-cli-progress-spinners-design.md  2026-06-26-issue-checkout-pr-design.md  2026-06-26-issue-review-request-finish-design.md  2026-06-30-stray-server-detection-design.md  2026-06-30-worktree-include-backfill-design.md
hooks/: announce-skill  hooks-codex.json  hooks-cursor.json  hooks.json  run-hook.cmd
skills/using-devkit/: SKILL.md  cli-reference.md
tests/: completions.rs  devrun_down_gate.rs  down_ports.rs  lifecycle.rs  lock_daemon.rs  lock_harness_race.rs  locks.rs  mcp.rs  parity.rs  supervision.rs
tests/common/: mod.rs
