[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
textplots = { version = "0.8", default-features = false }
serde_yaml_ng = "0.10"
fd-lock = "4"
nix = { version = "0.29", features = ["signal", "process"] }
comfy-table = "7"
anstyle = "1"
supports-hyperlinks = "3"
ureq = { version = "2", features = ["json"] }
devkit-common = { path = "crates/devkit-common" }
devkit-ports = { path = "crates/devkit-ports" }

[profile.release]
opt-level = 3        # tools do little compute; keep the registry/diff hot paths fast
lto = "thin"         # cross-crate inlining across the workspace libs
codegen-units = 1    # better optimization at the cost of compile time
panic = "abort"      # no bin catches panics; drops unwind tables, shrinks the binary
strip = true
