[package]
name = "devkit"
description = "Local development coordination tools: portman, devrun, issue, devkit-portd"
edition.workspace = true
version.workspace = true

# The supervisor daemon needs the port-registry daemon backend; gate its bin on
# the feature so `--no-default-features` builds still produce the other tools.
[[bin]]
name = "devkit-portd"
path = "src/bin/devkit-portd/main.rs"
required-features = ["daemon"]

[features]
default = ["daemon"]
daemon = ["devkit-ports/daemon"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
nix.workspace = true
serde = { workspace = true }
serde_json.workspace = true
fd-lock.workspace = true
chrono.workspace = true
textplots.workspace = true
rgb.workspace = true
devkit-common.workspace = true
devkit-ports.workspace = true

[workspace]
resolver = "3"
members = ["crates/devkit-common", "crates/devkit-ports", "crates/devkit-locks"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
clap_complete = "4"
chrono = { version = "0.4", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
textplots = { version = "0.8", default-features = false }
rgb = "0.8"
serde_yaml_ng = "0.10"
fd-lock = "4"
nix = { version = "0.29", features = ["signal", "process"] }
comfy-table = "7"
anstyle = "1"
supports-hyperlinks = "3"
ureq = { version = "2", features = ["json"] }
devkit-common = { path = "crates/devkit-common" }
devkit-ports = { path = "crates/devkit-ports" }
devkit-locks = { path = "crates/devkit-locks" }

[profile.release]
opt-level = 3        # tools do little compute; keep the registry/diff hot paths fast
lto = "thin"         # cross-crate inlining across the workspace libs
codegen-units = 1    # better optimization at the cost of compile time
panic = "abort"      # no bin catches panics; drops unwind tables, shrinks the binary
strip = true
