[package]
name = "devkit-common"
edition.workspace = true
version = "0.6.0" # x-release-please-version

[dependencies]
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
fd-lock.workspace = true
comfy-table.workspace = true
anstyle.workspace = true
supports-hyperlinks.workspace = true
ureq.workspace = true
minijinja.workspace = true
interprocess = { workspace = true, optional = true }

[features]
daemon = ["dep:interprocess"]

# Unix process primitives (signals, sessions); unavailable on Windows.
[target.'cfg(unix)'.dependencies]
nix.workspace = true

# Win32 process primitives (handles, Toolhelp, console control).
[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true
