[package]
name = "devkit-locks"
edition.workspace = true
version = "0.2.0" # x-release-please-version

[dependencies]
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
fd-lock.workspace = true
devkit-common.workspace = true
interprocess = { workspace = true, optional = true }

[features]
daemon = ["dep:interprocess", "devkit-common/daemon"]
