[package]
name = "devkit-mcp"
edition.workspace = true
version = "0.3.0" # x-release-please-version

[dependencies]
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
devkit-common.workspace = true
devkit-ports.workspace = true
devkit-locks.workspace = true

[features]
daemon = ["devkit-ports/daemon", "devkit-locks/daemon"]
