[package]
name = "devkit-portd"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
fd-lock.workspace = true
nix = { workspace = true, features = ["signal", "process"] }
devkit-common.workspace = true
devkit-ports = { workspace = true, features = ["daemon"] }
