[package]
name = "devkit-ports"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
serde_yaml_ng.workspace = true
fd-lock.workspace = true
devkit-common.workspace = true

[features]
daemon = []
