[package]
name = "devkit-ports"
edition.workspace = true
version = "0.7.0" # x-release-please-version

[dependencies]
anyhow.workspace = true
clap = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
serde_yaml_ng.workspace = true
fd-lock.workspace = true
interprocess = { workspace = true, optional = true }
devkit-common.workspace = true

[features]
daemon = ["dep:interprocess", "devkit-common/daemon"]

[target.'cfg(unix)'.dependencies]
nix.workspace = true
