[package]
name = "issue"
edition.workspace = true
version.workspace = true

[[bin]]
name = "issue"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde = { workspace = true }
serde_json.workspace = true
devkit-common.workspace = true
devkit-ports.workspace = true
chrono.workspace = true
textplots.workspace = true
rgb.workspace = true
